fixed gap

--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -44,7 +44,7 @@ header {
         position: relative;
         width: 80%;
         margin: auto;
-        top: -24px;
+        top: -17px;
         display: flex;
         overflow: hidden;
         transition: all 0.3s ease-out;
