--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -15,7 +15,10 @@
   background-size: 300px 100%;
   background-image: url(../../assets/images/heor.png);
   @include breakpoint(mobile576) {
-    background-size: auto;
+    background-size: auto 100%;
+  }
+  @include breakpoint(desktop1600) {
+    min-height: 60vh;
   }
   .left-content {
     top: 50%;
@@ -501,6 +504,7 @@ text-align: center;
 
 .eventnotice {
   padding-bottom: 100px;
+  margin-top: 50px;
 
   .section-title {
     color: #2D3092;
